--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -12,7 +12,7 @@ dataset:
     num_images: 60
 
 run:
-  n_epochs: 50
+  n_epochs: 100
   current_epoch: 0
   plots:
     enable: True
@@ -27,7 +27,7 @@ logging:
     save_dir: "../wandb"
     project: "net-fragments"
     log_model: True
-    group: v1
+    group: base
     job_type: train
   console:
     active: True
@@ -47,7 +47,7 @@ lateral_model:
     locality_size: 5
     lr: 0.2
     neg_corr: True
-    act_threshold: 0.5  # 'bernoulli'
+    act_threshold: 'bernoulli'
     square_factor:
       - 1.2
       - 1.4
