--- a/configs/train_v2.yaml
+++ b/configs/train_v2.yaml
@@ -27,8 +27,8 @@ logging:
     save_dir: "../wandb"
     project: "net-fragments"
     log_model: True
-    group: null
-    job_type: null
+    group: v2
+    job_type: train
   console:
     active: True
 
@@ -36,7 +36,9 @@ n_alternative_cells: 10
 
 feature_extractor:
   out_channels: 4
-  bin_threshold: 0.  # set to 0.5 to obtain better features
+  s1_params:
+    use_larger_weights: False
+    threshold_f: 'threshold'
 
 lateral_model:
   channels: 4
