--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 wandb~=0.16.1
-tqdm-4.66.1
-lightning-2.1.3
-matplotlib-3.8.2
-deepdiff-6.7.1
+tqdm~=4.66.1
+lightning~=2.1.3
+matplotlib~=3.8.2
+deepdiff~=6.7.1
+opencv-python~=4.9.0.80
+pandas~=2.1.4
